inheritance/inheritance180_output.txt
inheritance$ g++ inheritance180.cpp 
inheritance180.cpp: In function ‘int main()’:
inheritance180.cpp:38:8: error: ‘Shape’ is an inaccessible base of ‘Square’
   38 |   f1(sq);
      |        ^
inheritance180.cpp:29:15: note:   initializing argument 1 of ‘void f1(Shape)’
   29 | void f1(Shape a){
      |         ~~~~~~^
inheritance$ 
